--- a/index.css
+++ b/index.css
@@ -1,51 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400');
 
 * {
   box-sizing: border-box;
-  line-height: 1.3;
+  line-height: 1.25;
 }
 
 body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #f5f5f5;
+  background-color: rgb(245, 245, 245);
+  color: #333;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+  appearance: none;
+  background-color: inherit;
+}
+
+.dark {
+  background-color: rgb(30, 30, 30);
+  color: rgb(200, 200, 200);
 }
 
 h1 {
   font-size: 24px;
-  color: #333;
   margin: 0;
 }
 
 h2 {
   font-size: 20px;
-  color: #333;
   margin: 0;
 }
 
 h3 {
-  font-size: 18px;
-  color: #333;
+  font-size: 16px;
   margin: 0;
 }
 
 p {
-  font-size: 16px;
+  font-size: 14px;
   color: #555;
   margin: 3px 0 0px 0;
 }
 
-a:link { text-decoration: none; color: rgb(0, 0, 170); }
+.dark p {
+  color: rgb(175, 175, 175);
+}
 
+a {
+  font-size: 14px;
+  color: rgb(0, 0, 170);
+  text-decoration: none;
+}
 
-a:visited { text-decoration: none; color: rgb(0, 0, 170); }
+.dark a {
+  /* lighter blue */
+  color: rgb(0, 83, 208);
+}
 
-
-a:hover { text-decoration: underline; color: rgb(0, 0, 170); }
-
-
-a:active { text-decoration: none; color: rgb(0, 0, 170); }
+a:hover { text-decoration: underline;}
 
 /* layout */
 
@@ -53,7 +69,7 @@ a:active { text-decoration: none; color: rgb(0, 0, 170); }
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  margin: 0 calc(10% - 20px);
+  margin: 0 calc(10%);
 }
 
 .flex-container {
@@ -63,25 +79,36 @@ a:active { text-decoration: none; color: rgb(0, 0, 170); }
 }
 
 /* index */
-
 .title {
-  margin-top: 35px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  justify-content: center;
+  width: 100%;
+}
+
+.title-text {
+  margin-top: 5px;
 }
 
 .title-img {
   flex: 1;
-  margin: auto;
 }
 
 .title-img * {
   border-radius: 3px;
-  height: 100px;
-  width: 100px;
+  height: 75px;
+  width: 75px;
+  border: 1px solid #ddd;
+}
+
+.dark .title-img * {
+  border: 1px solid rgb(50, 50, 50);
 }
 
 .text-container {
   flex: 100;
-  min-width: 200px;
+  min-width: 250px;
   display: flex;
   text-align: justify;
   text-justify: inter-word;
@@ -94,17 +121,15 @@ a:active { text-decoration: none; color: rgb(0, 0, 170); }
 .section {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 .project {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: row-reverse;
+  justify-content: center;
   width: 100%;
-  border-radius: 3px;
-  overflow: hidden;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -112,13 +137,14 @@ a:active { text-decoration: none; color: rgb(0, 0, 170); }
 .project-media {
   margin: 0 20px 10px 0;
   width: 100%;
-  max-width: 175px;
+  max-width: 125px;
 }
 
 .project-media * {
   border-radius: 3px;
   width: 100%;
 }
+
 .footer {
   display: flex;
   flex-direction: row;
@@ -139,9 +165,17 @@ a:active { text-decoration: none; color: rgb(0, 0, 170); }
 }
 
 .conference {
-  background-color: #d2deeb;
+  background-color: rgb(210, 222, 235);
+}
+
+.dark .conference {
+  background-color: rgb(33, 61, 90);
 }
 
 .arxiv {
   background-color: #e8e8e8;
+}
+
+.dark .arxiv {
+  background-color: #323232;
 }
