--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ a:hover { text-decoration: underline;}
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  margin: 0 calc(10%);
+  margin: 0 10px;
 }
 
 .flex-container {
