--- a/index.css
+++ b/index.css
@@ -9,8 +9,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: rgb(245, 245, 245);
-  color: #333;
+  background-color: rgb(30, 30, 30);
+  color: rgb(200, 200, 200);
 }
 
 button {
@@ -20,9 +20,9 @@ button {
   background-color: inherit;
 }
 
-.dark {
-  background-color: rgb(30, 30, 30);
-  color: rgb(200, 200, 200);
+.light {
+  background-color: rgb(245, 245, 245);
+  color: #333;
 }
 
 h1 {
@@ -42,23 +42,23 @@ h3 {
 
 p {
   font-size: 14px;
-  color: #555;
+  color: rgb(175, 175, 175);
   margin: 3px 0 0px 0;
 }
 
-.dark p {
-  color: rgb(175, 175, 175);
+.light p {
+  color: #555;
 }
 
 a {
   font-size: 14px;
-  color: rgb(0, 0, 170);
+  color: rgb(146, 174, 227);
   text-decoration: none;
 }
 
-.dark a {
+.light a {
   /* lighter blue */
-  color: rgb(146, 174, 227);
+  color: rgb(0, 0, 170);
 }
 
 a:hover { text-decoration: underline;}
@@ -128,11 +128,11 @@ a:hover { text-decoration: underline;}
 .title-img * {
   width: 100%;
   border-radius: 3px;
-  border: 1px solid #ddd;
+  border: 1px solid rgb(50, 50, 50);
 }
 
-.dark .title-img * {
-  border: 1px solid rgb(50, 50, 50);
+.light .title-img * {
+  border: 1px solid #ddd;
 }
 
 .project-media {
@@ -160,9 +160,9 @@ a:hover { text-decoration: underline;}
 }
 
 .conference {
-  background-color: rgb(210, 222, 235);
+  background-color: rgb(33, 61, 90);
 }
 
-.dark .conference {
-  background-color: rgb(33, 61, 90);
+.light .conference {
+  background-color: rgb(210, 222, 235);
 }
