--- a/index.css
+++ b/index.css
@@ -43,7 +43,17 @@ h3 {
 
 p {
   color: rgb(175, 175, 175);
-  margin: 0px 0 0px 0;
+  margin: 0px 0 2px 0;
+}
+
+hr {
+  border-color: rgb(125, 125, 125);
+  width: 100%;
+  margin: 20px 0 20px 0;
+}
+
+.light hr {
+  border-color: #ddd;
 }
 
 /* reduce the left margin of lists */
