--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: blog
 ---
 <div class="text-container">
 
-  <h2>{{ page.title }}</h2>
+  <h1>joso journal: {{ page.title }}</h1>
   <p>{{ page.date | date_to_string }}</p>
   <p>keywords: {{ page.keywords }}</p>
   <p>back to <a href="/blog.html">blog</a></p>
