--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
 * {
   box-sizing: border-box;
@@ -10,6 +10,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   background-color: rgb(30, 30, 30);
   color: rgb(200, 200, 200);
 }
@@ -29,16 +30,19 @@ button {
 h1 {
   font-size: 24px;
   margin: 0;
+  font-weight: 400;
 }
 
 h2 {
   font-size: 20px;
   margin: 0;
+  font-weight: 400;
 }
 
 h3 {
   font-size: 16px;
   margin: 0;
+  font-weight: 300;
 }
 
 p {
