--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  background-color: rgb(30, 30, 30);
+  background-color: rgb(20, 20, 20);
   color: rgb(200, 200, 200);
 }
 
@@ -22,8 +22,8 @@ button {
 }
 
 .light {
-  background-color: rgb(245, 245, 245);
-  color: #333;
+  background-color: rgb(230, 230, 230);
+  color: rgb(20, 20, 20);
 }
 
 h1 {
@@ -37,6 +37,16 @@ h2 {
   font-size: 18px;
   margin: 0;
   font-weight: 400;
+  display: flex;
+  align-items: center;
+}
+
+h2 hr {
+  flex-grow: 1;
+  margin-left: 20px;
+  height: 1px;
+  background-color: rgb(70, 70, 70);
+  border: none;
 }
 
 h3 {
@@ -66,6 +76,11 @@ li {
   color: rgb(190, 190, 190);
 }
 
+a {
+  color: rgb(146, 174, 255);
+  text-decoration: none;
+}
+
 .light p {
   color: #222;
 }
@@ -78,14 +93,13 @@ li {
   color: #222;
 }
 
-a {
-  color: rgb(146, 174, 255);
-  text-decoration: none;
-}
-
 .light a {
   /* lighter blue */
   color: rgb(0, 0, 170);
+}
+
+.light h2 hr {
+  background-color: rgb(200, 200, 200);
 }
 
 a:hover { text-decoration: underline;}
@@ -130,6 +144,7 @@ a:hover { text-decoration: underline;}
   width: 100%;
   margin-bottom: 5px;
 }
+
 
 /* heading and footer */
 
@@ -183,20 +198,30 @@ a:hover { text-decoration: underline;}
 
 .badge {
   display: inline-block;
-  padding: 0.1em 0.4em;
-  margin-right: 5px;
+  padding: 4px 8px;
   margin-top: 4px;
-  font-size: 80%;
+  margin-right: 5px;
+  font-size: 0.85em;
+  font-weight: 300;
+  line-height: 1;
   text-align: center;
   white-space: nowrap;
-  border-radius: 5px;
   vertical-align: baseline;
+  border-radius: 4px;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
 }
 
-.conference {
-  background-color: rgb(14, 57, 103);
+.badge.conference {
+  color: #f0f0f0;
+  background-color: #6c7a89;
 }
 
-.light .conference {
-  background-color: rgb(210, 222, 235);
+.light .badge.conference {
+  color: #2c3e50;
+  background-color: #d5d8dc;
+}
+
+.badge:hover {
+  opacity: 0.9;
+  user-select: none;
 }
