--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html lang="en-us">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="/css/blog.css">
@@ -8,8 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="John So">
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta name="description" content="John So's blog – research notes and thoughts">
 </head>
-<body>
+<body class="light">
   <div class="outer-container">
     <div class="flex-container">
       {{ content }}
