--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;700&display=swap');
 
 * {
   box-sizing: border-box;
-  font-size: 15px;
+  font-size: 18px;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
+  font-family: 'EB Garamond', 'Garamond', serif;
+  font-weight: 400;
   background-color: rgb(20, 20, 20);
   color: rgb(200, 200, 200);
 }
@@ -22,19 +22,19 @@ button {
 }
 
 .light {
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(250, 248, 240);
   color: rgb(20, 20, 20);
 }
 
 h1 {
-  line-height: 1.5;
-  font-size: 24px;
+  line-height: 1.4;
+  font-size: 30px;
   margin: 0;
   font-weight: 400;
 }
 
 h2 {
-  font-size: 18px;
+  font-size: 24px;
   margin: 0;
   font-weight: 400;
   display: flex;
@@ -50,28 +50,28 @@ h2 hr {
 }
 
 h3 {
-  line-height: 1.5;
-  font-size: 16px;
+  line-height: 1.4;
+  font-size: 20px;
   margin: 0;
   margin-bottom: 2px;
   font-weight: 400;
 }
 
 p {
-  line-height: 1.5;
+  line-height: 1.4;
   color: rgb(190, 190, 190);
   margin: 0px 0 2px 0;
 }
 
 /* reduce the left margin of lists */
 ol, ul {
-  line-height: 1.5;
+  line-height: 1.4;
   padding-left: 20px; /* Adjust the value as needed */
   color: rgb(190, 190, 190);
 }
 
 li {
-  line-height: 1.5;
+  line-height: 1.4;
   margin: 0;
   color: rgb(190, 190, 190);
 }
@@ -79,6 +79,14 @@ li {
 a {
   color: rgb(146, 174, 255);
   text-decoration: none;
+}
+
+a:visited {
+  color: rgb(110, 130, 200);
+}
+
+b, strong {
+  font-weight: 500;
 }
 
 .light p {
@@ -163,8 +171,8 @@ a:hover { text-decoration: underline;}
 /* media */
 
 .title-img {
-  height: 85px;
-  width: 85px;
+  height: 100px;
+  width: 100px;
 }
 
 .title-img * {
@@ -180,7 +188,7 @@ a:hover { text-decoration: underline;}
 .project-media {
   margin: 10px;
   width: 100%;
-  max-width: 165px;
+  max-width: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
